--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-discord.py==1.7.3
+beautifulsoup4==4.11.1
+discord.py==2.0.1
 discord_py_slash_command==3.0.3
 Flask==2.0.2
-python-dotenv==0.19.2
+matplotlib==3.5.3
+numpy==1.23.2
+Pillow==9.2.0
+pilmoji==2.0.2
+python-dotenv==0.21.0
+requests==2.28.1
