Fixes + disable nnn

--- a/template.env
+++ b/template.env
@@ -24,6 +24,7 @@ AD_POSTER_ROLE_ID=0
 
 # Channels
 CHANNEL_IDS=REPLACE_WITH_IDS
+ROLES_CHANNEL_ID=REPLACE_WITH_ID
 TALLY_CHANNEL_ID=REPLACE_WITH_ID
 LOG_CHANNEL_ID=REPLACE_WITH_ID
 GAME_CHANNEL_IDS=REPLACE_WITH_IDS
@@ -34,6 +35,9 @@ EMOJI_CHANNEL_ID=REPLACE_WITH_ID
 NOHORNY_CHANNEL_IDS=REPLACE_WITH_ID
 HORNY_CHANNEL_ID=REPLACE_WITH_ID
 PURGEABLE_CHANNEL_IDS=REPLACE_WITH_ID
+
+# Miscellaneous
+NNN_YEAR=2023
 
 FORTUNE_LOG_LEVEL=INFO
 
@@ -51,3 +55,4 @@ FEATURE_ENABLE_TIERS=y
 FEATURE_ENABLE_MOON=y
 FEATURE_ENABLE_MODERATION=y
 FEATURE_ENABLE_PIN_ARCHIVE=y
+FEATURE_ENABLE_NNN=y
